--- a/config/config.json
+++ b/config/config.json
@@ -17,9 +17,9 @@
   },
   "production": {
     "username": "postgres",
-    "password": "shivam",
-    "database": "xcibil-admin-panel",
-    "host": "localhost",
+    "password": "gYW1JHcrUhbgcbqdfPB4",
+    "database": "railway",
+    "host": "containers-us-west-18.railway.app",
     "dialect": "postgres",
     "logging": false
   }
