--- a/config/config.json
+++ b/config/config.json
@@ -21,6 +21,7 @@
     "database": "railway",
     "host": "containers-us-west-18.railway.app",
     "dialect": "postgres",
-    "logging": false
+    "logging": false,
+    "port": 6211
   }
 }
